--- a/src/index.html
+++ b/src/index.html
@@ -93,39 +93,53 @@
               autoplay
               muted
             ></video>
-            <div class="quality-container__tecnologias">
-              <div class="box-tec">
-                <img
-                  width="100px"
-                  height="100px"
-                  src="./assets/logo/Adobe-Photoshop-Logo.png"
-                  alt=""
-                />
-                <p>Adobe Photoshop</p>
-              </div>
-              <div class="box-tec">
-                <img
-                  width="100px"
-                  height="100px"
-                  src="./assets/logo/illustrator.png"
-                  alt=""
-                />
-                <p>Adobe Illustrator</p>
-              </div>
-              <div class="box-tec">
-                <img
-                  width="100px"
-                  height="100px"
-                  src="./assets/logo/logo-Sony.png"
-                  alt=""
-                />
-                <p>Sony A7 III</p>
-              </div>
-            </div>
           </div>
-
-          <div class="quality-container__photo">
-              <img src="assets/images/client.jpg" alt="" />
+          <div class="quality-container__tecnologias">
+            <div class="box-tec">
+              <img
+                width="100px"
+                height="100px"
+                src="./assets/logo/photoshop.png"
+                alt=""
+              />
+              <p>Adobe Photoshop</p>
+            </div>
+            <div class="box-tec">
+              <img
+                width="100px"
+                height="100px"
+                src="./assets/logo/illustrator.png"
+                alt=""
+              />
+              <p>Adobe Illustrator</p>
+            </div>
+            <div class="box-tec">
+              <img
+                width="100px"
+                height="100px"
+                src="./assets/logo/lightroom.png"
+                alt=""
+              />
+              <p>Adobe Lightroom</p>
+            </div>
+            <div class="box-tec">
+              <img
+                width="100px"
+                height="100px"
+                src="./assets/logo/premier.png"
+                alt=""
+              />
+              <p>Adobe Premiere</p>
+            </div>
+            <div class="box-tec">
+              <img
+                width="100px"
+                height="100px"
+                src="./assets/logo/sony.png"
+                alt=""
+              />
+              <p>Sony A7 III</p>
+            </div>
           </div>
         </div>
       </section>
@@ -136,16 +150,30 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto
             esse dolorum illum magnam, velit unde animi. Libero expedita natus
             voluptatem velit. Quae magnam ut dolorum. Sint unde nobis ullam ab.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur
-            minus consectetur rem a dolorem vero deleniti repudiandae eaque
-            corrupti perferendis mollitia sit, ducimus animi optio culpa,
-            similique assumenda suscipit quos?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Consequuntur minus consectetur rem a dolorem vero deleniti
+            repudiandae eaque corrupti perferendis mollitia sit, ducimus animi
+            optio culpa, similique assumenda suscipit quos?
           </p>
         </div>
         <footer class="about-us__footer">
           <ul>
-            <li><img height="40px" width="40px" src="assets/icons/instagram.png" alt=""><a href="#">Instragram</a></li>
-            <li><img height="40px" width="40px" src="assets/icons/youtube.png" alt=""><a href="#">Youtube</a></li>
+            <li>
+              <img
+                height="40px"
+                width="40px"
+                src="assets/icons/instagram.png"
+                alt=""
+              /><a href="#">Instragram</a>
+            </li>
+            <li>
+              <img
+                height="40px"
+                width="40px"
+                src="assets/icons/youtube.png"
+                alt=""
+              /><a href="#">Youtube</a>
+            </li>
           </ul>
         </footer>
       </section>
