--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,53 @@
           <li class="header-menu__item"><a href="#about_us">CONTACTO</a></li>
         </ul>
       </header>
+      <section class="group-video">
+        <h2 class="title-section">Producciones Audiovisuales</h2>
+        <p class="text-section">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto
+          esse dolorum illum magnam, velit unde animi. Libero expedita natus
+          voluptatem velit. Quae magnam ut dolorum. Sint unde nobis ullam ab.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur
+          minus consectetur rem a dolorem vero deleniti repudiandae eaque
+          corrupti perferendis mollitia sit, ducimus animi optio culpa,
+          similique assumenda suscipit quos?
+        </p>
+        <div class="group-video__container">
+          <div class="video_item">
+            <iframe
+              width="100%"
+              height="100%"
+              src="https://www.youtube.com/embed/KNkiHqbuCGI?controls=0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video_item">
+            <iframe
+              width="100%"
+              height="100%"
+              src="https://www.youtube.com/embed/P8ldzQ1ETrE?controls=0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video_item">
+            <iframe
+              width="100%"
+              height="100%"
+              src="https://www.youtube.com/embed/NnddojF_HFo?controls=0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </section>
       <section class="group-photos">
         <h2 class="title-section">Capturando Momentos</h2>
         <p class="text-section">
@@ -41,34 +88,48 @@
         <div class="group-photos__container">
           <img
             class="group-photos__container__item"
-            src="./assets/images/header1.jpg"
-            alt=""
+            src="./assets/album/image1.jpg"
+            alt="image1"
           />
           <img
             class="group-photos__container__item"
-            src="./assets/images/header2.jpg"
-            alt=""
+            src="./assets/album/image2.jpg"
+            alt="image2"
           />
           <img
             class="group-photos__container__item"
-            src="./assets/images/header3.jpg"
-            alt=""
+            src="./assets/album/image3.jpg"
+            alt="image3"
           />
           <img
             class="group-photos__container__item"
-            src="./assets/images/header1.jpg"
-            alt=""
+            src="./assets/album/image4.jpg"
+            alt="image4"
           />
           <img
             class="group-photos__container__item"
-            src="./assets/images/header3.jpg"
-            alt=""
+            src="./assets/album/image5.jpg"
+            alt="image5"
           />
           <img
             class="group-photos__container__item"
-            src="./assets/images/header2.jpg"
-            alt=""
+            src="./assets/album/image6.jpg"
+            alt="image6"
           />
+          <!-- <img class="group-photos__container__item" src="./assets/album/image7.jpg" alt="image7">
+         <img class="group-photos__container__item" src="./assets/album/image8.jpg" alt="image8">
+         <img class="group-photos__container__item" src="./assets/album/image9.jpg" alt="image9">
+         <img class="group-photos__container__item" src="./assets/album/image10.jpg" alt="image10">
+         <img class="group-photos__container__item" src="./assets/album/image11.jpg" alt="image11">
+         <img class="group-photos__container__item" src="./assets/album/image12.jpg" alt="image12">
+         <img class="group-photos__container__item" src="./assets/album/image13.jpg" alt="image13">
+         <img class="group-photos__container__item" src="./assets/album/image14.jpg" alt="image14">
+         <img class="group-photos__container__item" src="./assets/album/image15.jpg" alt="image15">
+         <img class="group-photos__container__item" src="./assets/album/image16.jpg" alt="image16">
+         <img class="group-photos__container__item" src="./assets/album/image17.jpg" alt="image17">
+         <img class="group-photos__container__item" src="./assets/album/image18.jpg" alt="image18">
+         <img class="group-photos__container__item" src="./assets/album/image19.jpg" alt="image19">
+         <img class="group-photos__container__item" src="./assets/album/image20.jpg" alt="image20"> -->
         </div>
       </section>
       <section class="quality">
