--- a/src/index.html
+++ b/src/index.html
@@ -87,31 +87,38 @@
         </p>
         <div class="group-photos__container">
           <img
+            loading="lazy"
             class="group-photos__container__item"
             src="./assets/album/image1.jpg"
             alt="image1"
           />
           <img
+
+            
             class="group-photos__container__item"
             src="./assets/album/image2.jpg"
             alt="image2"
           />
           <img
+            loading="lazy"
             class="group-photos__container__item"
             src="./assets/album/image3.jpg"
             alt="image3"
           />
           <img
+            loading="lazy"
             class="group-photos__container__item"
             src="./assets/album/image4.jpg"
             alt="image4"
           />
           <img
+            loading="lazy"
             class="group-photos__container__item"
             src="./assets/album/image5.jpg"
             alt="image5"
           />
           <img
+            loading="lazy"
             class="group-photos__container__item"
             src="./assets/album/image6.jpg"
             alt="image6"
