--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <li class="header-menu__item"><a href="#">ABOUT</a></li>
             <li class="header-menu__item"><a href="#">PORTAFOLIO</a></li>
             <li class="header-menu__item__img">
-              <img src="./assets/images/log.png" alt="logo" />
+              <img src="./assets/logo/logo.png" alt="logo" />
             </li>
             <li class="header-menu__item"><a href="#">BLOG</a></li>
             <li class="header-menu__item"><a href="#">CATEGORIAS</a></li>
@@ -34,7 +34,7 @@
               <img src="assets/icons/menu.png" alt="menu-icon">
             </div>
             <div class="header-mobile__logo">
-              <img src="assets/images/log.png" alt="logo">
+              <img src="./assets/logo/logo.png" alt="logo">
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
           <img
             loading="lazy"
             class="group-photos__container__item"
-            src="./assets/album/image2.jpg"
+            src="./assets/album/image11.jpg"
             alt="image2"
           />
           <img
@@ -128,7 +128,7 @@
           <img
             loading="lazy"
             class="group-photos__container__item"
-            src="./assets/album/image5.jpg"
+            src="./assets/album/image9.jpg"
             alt="image5"
           />
           <img
@@ -137,20 +137,6 @@
             src="./assets/album/image6.jpg"
             alt="image6"
           />
-          <!-- <img class="group-photos__container__item" src="./assets/album/image7.jpg" alt="image7">
-         <img class="group-photos__container__item" src="./assets/album/image8.jpg" alt="image8">
-         <img class="group-photos__container__item" src="./assets/album/image9.jpg" alt="image9">
-         <img class="group-photos__container__item" src="./assets/album/image10.jpg" alt="image10">
-         <img class="group-photos__container__item" src="./assets/album/image11.jpg" alt="image11">
-         <img class="group-photos__container__item" src="./assets/album/image12.jpg" alt="image12">
-         <img class="group-photos__container__item" src="./assets/album/image13.jpg" alt="image13">
-         <img class="group-photos__container__item" src="./assets/album/image14.jpg" alt="image14">
-         <img class="group-photos__container__item" src="./assets/album/image15.jpg" alt="image15">
-         <img class="group-photos__container__item" src="./assets/album/image16.jpg" alt="image16">
-         <img class="group-photos__container__item" src="./assets/album/image17.jpg" alt="image17">
-         <img class="group-photos__container__item" src="./assets/album/image18.jpg" alt="image18">
-         <img class="group-photos__container__item" src="./assets/album/image19.jpg" alt="image19">
-         <img class="group-photos__container__item" src="./assets/album/image20.jpg" alt="image20"> -->
         </div>
       </section>
       <section class="quality">
