--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,24 @@
       sizes="192x192"
       href="./android-icon-192x192.png"
     />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
     <link rel="manifest" href="./manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="./ms-icon-144x144.png" />
@@ -56,5 +71,14 @@
   </head>
   <body>
     <div class="main" id="main"></div>
+    <!-- <script>
+      window.billduConfig = {
+        id: 'fa39f1ba209af5ca0b471eb7cc43e26be449d0b1',
+        position: 'right',
+        color: '#1a58e5',
+        openAtLaunch: false,
+      }
+    </script>
+    <script src="https://billdu.me/widget"></script> -->
   </body>
 </html>
