cambios en el menu y header

--- a/public/index.html
+++ b/public/index.html
@@ -71,14 +71,14 @@
   </head>
   <body>
     <div class="main" id="main"></div>
-    <!-- <script>
+    <script>
       window.billduConfig = {
         id: 'fa39f1ba209af5ca0b471eb7cc43e26be449d0b1',
         position: 'right',
-        color: '#1a58e5',
+        color: '#f3f3f3',
         openAtLaunch: false,
       }
     </script>
-    <script src="https://billdu.me/widget"></script> -->
+    <script async src="https://billdu.me/widget"></script>
   </body>
 </html>
