--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
   </head>
   <body>
     <div class="main" id="main"></div>
-    <script>
+    <!-- <script>
       window.billduConfig = {
         id: 'fa39f1ba209af5ca0b471eb7cc43e26be449d0b1',
         position: 'right',
@@ -79,6 +79,6 @@
         openAtLaunch: false,
       }
     </script>
-    <script async src="https://billdu.me/widget"></script>
+    <script async src="https://billdu.me/widget"></script> -->
   </body>
 </html>
